Use companies attribute in speaker name getting