@@ -387,8 +387,8 @@ public class LocalizationUtilsTest {
 
     @Nested
     @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-    @DisplayName("getSpeakerNameWithLastNameFirstWithCompany method tests")
-    class GetSpeakerNameWithLastNameFirstWithCompanyTest {
+    @DisplayName("getSpeakerNameWithLastNameFirstWithCompanies method tests")
+    class GetSpeakerNameWithLastNameFirstWithCompaniesTest {
         private Stream<Arguments> data() {
             final List<LocaleItem> FULL_NAME_LOCALE_ITEMS = Arrays.asList(
                     new LocaleItem(Language.ENGLISH.getCode(), "FirstName LastName"),
@@ -396,12 +396,17 @@ public class LocalizationUtilsTest {
             final List<LocaleItem> ENGLISH_NAME_LOCALE_ITEMS = Collections.singletonList(
                     new LocaleItem(Language.ENGLISH.getCode(), "FirstName LastName"));
 
-            final List<LocaleItem> EMPTY_COMPANY_LOCALE_ITEMS = Collections.emptyList();
-            final List<LocaleItem> FULL_COMPANY_LOCALE_ITEMS = Arrays.asList(
-                    new LocaleItem(Language.ENGLISH.getCode(), "Company"),
-                    new LocaleItem(Language.RUSSIAN.getCode(), "Компания"));
-            final List<LocaleItem> ENGLISH_COMPANY_LOCALE_ITEMS = Collections.singletonList(
-                    new LocaleItem(Language.ENGLISH.getCode(), "Company"));
+            Company company0 = new Company(0, List.of(
+                    new LocaleItem(Language.ENGLISH.getCode(), "Company0"),
+                    new LocaleItem(Language.RUSSIAN.getCode(), "Компания0")));
+            Company company1 = new Company(1, List.of(
+                    new LocaleItem(Language.ENGLISH.getCode(), "Company1")));
+
+            final List<Company> EMPTY_COMPANY_LIST = Collections.emptyList();
+            final List<Company> FULL_LANGUAGE_COMPANY_LIST = List.of(company0);
+            final List<Company> ENGLISH_LANGUAGE_COMPANY_LIST = List.of(company1);
+            final List<Company> SOME_COMPANY_LIST = List.of(company0, company1);
+            final List<Company> SOME_COMPANY_REVERSE_LIST = List.of(company1, company0);
 
             return Stream.of(
                     arguments(new Speaker(0L,
@@ -475,8 +480,8 @@ public class LocalizationUtilsTest {
                     arguments(new Speaker(0L,
                                     "0000.jpg",
                                     FULL_NAME_LOCALE_ITEMS,
-                                    EMPTY_COMPANY_LOCALE_ITEMS,
-                                    Collections.emptyList(),
+                                    null,
+                                    EMPTY_COMPANY_LIST,
                                     null,
                                     new Speaker.SpeakerSocials(
                                             null,
@@ -492,8 +497,8 @@ public class LocalizationUtilsTest {
                     arguments(new Speaker(0L,
                                     "0000.jpg",
                                     FULL_NAME_LOCALE_ITEMS,
-                                    EMPTY_COMPANY_LOCALE_ITEMS,
-                                    Collections.emptyList(),
+                                    null,
+                                    EMPTY_COMPANY_LIST,
                                     null,
                                     new Speaker.SpeakerSocials(
                                             null,
@@ -509,8 +514,8 @@ public class LocalizationUtilsTest {
                     arguments(new Speaker(0L,
                                     "0000.jpg",
                                     FULL_NAME_LOCALE_ITEMS,
-                                    FULL_COMPANY_LOCALE_ITEMS,
-                                    Collections.emptyList(),
+                                    null,
+                                    FULL_LANGUAGE_COMPANY_LIST,
                                     null,
                                     new Speaker.SpeakerSocials(
                                             null,
@@ -522,12 +527,12 @@ public class LocalizationUtilsTest {
                                             false
                                     )
                             ),
-                            Language.ENGLISH, "LastName FirstName (Company)"),
+                            Language.ENGLISH, "LastName FirstName (Company0)"),
                     arguments(new Speaker(0L,
                                     "0000.jpg",
                                     FULL_NAME_LOCALE_ITEMS,
-                                    FULL_COMPANY_LOCALE_ITEMS,
-                                    Collections.emptyList(),
+                                    null,
+                                    FULL_LANGUAGE_COMPANY_LIST,
                                     null,
                                     new Speaker.SpeakerSocials(
                                             null,
@@ -539,12 +544,12 @@ public class LocalizationUtilsTest {
                                             false
                                     )
                             ),
-                            Language.RUSSIAN, "Фамилия Имя (Компания)"),
+                            Language.RUSSIAN, "Фамилия Имя (Компания0)"),
                     arguments(new Speaker(0L,
                                     "0000.jpg",
                                     FULL_NAME_LOCALE_ITEMS,
-                                    ENGLISH_COMPANY_LOCALE_ITEMS,
-                                    Collections.emptyList(),
+                                    null,
+                                    ENGLISH_LANGUAGE_COMPANY_LIST,
                                     null,
                                     new Speaker.SpeakerSocials(
                                             null,
@@ -556,12 +561,12 @@ public class LocalizationUtilsTest {
                                             false
                                     )
                             ),
-                            Language.RUSSIAN, "Фамилия Имя (Company)"),
+                            Language.RUSSIAN, "Фамилия Имя (Company1)"),
                     arguments(new Speaker(0L,
                                     "0000.jpg",
                                     ENGLISH_NAME_LOCALE_ITEMS,
-                                    FULL_COMPANY_LOCALE_ITEMS,
-                                    Collections.emptyList(),
+                                    null,
+                                    FULL_LANGUAGE_COMPANY_LIST,
                                     null,
                                     new Speaker.SpeakerSocials(
                                             null,
@@ -573,12 +578,12 @@ public class LocalizationUtilsTest {
                                             false
                                     )
                             ),
-                            Language.RUSSIAN, "LastName FirstName (Компания)"),
+                            Language.RUSSIAN, "LastName FirstName (Компания0)"),
                     arguments(new Speaker(0L,
                                     "0000.jpg",
                                     ENGLISH_NAME_LOCALE_ITEMS,
-                                    ENGLISH_COMPANY_LOCALE_ITEMS,
-                                    Collections.emptyList(),
+                                    null,
+                                    ENGLISH_LANGUAGE_COMPANY_LIST,
                                     null,
                                     new Speaker.SpeakerSocials(
                                             null,
@@ -590,14 +595,48 @@ public class LocalizationUtilsTest {
                                             false
                                     )
                             ),
-                            Language.RUSSIAN, "LastName FirstName (Company)")
+                            Language.RUSSIAN, "LastName FirstName (Company1)"),
+                    arguments(new Speaker(0L,
+                                    "0000.jpg",
+                                    ENGLISH_NAME_LOCALE_ITEMS,
+                                    null,
+                                    SOME_COMPANY_LIST,
+                                    null,
+                                    new Speaker.SpeakerSocials(
+                                            null,
+                                            null
+                                    ),
+                                    new Speaker.SpeakerDegrees(
+                                            false,
+                                            false,
+                                            false
+                                    )
+                            ),
+                            Language.ENGLISH, "LastName FirstName (Company0, Company1)"),
+                    arguments(new Speaker(0L,
+                                    "0000.jpg",
+                                    ENGLISH_NAME_LOCALE_ITEMS,
+                                    null,
+                                    SOME_COMPANY_REVERSE_LIST,
+                                    null,
+                                    new Speaker.SpeakerSocials(
+                                            null,
+                                            null
+                                    ),
+                                    new Speaker.SpeakerDegrees(
+                                            false,
+                                            false,
+                                            false
+                                    )
+                            ),
+                            Language.ENGLISH, "LastName FirstName (Company0, Company1)")
             );
         }
 
         @ParameterizedTest
         @MethodSource("data")
-        void getSpeakerNameWithLastNameFirstWithCompany(Speaker speaker, Language language, String expected) {
-            assertEquals(expected, LocalizationUtils.getSpeakerNameWithLastNameFirstWithCompany(speaker, language));
+        void getSpeakerNameWithLastNameFirstWithCompanies(Speaker speaker, Language language, String expected) {
+            assertEquals(expected, LocalizationUtils.getSpeakerNameWithLastNameFirstWithCompanies(speaker, language));
         }
     }
 
@@ -656,15 +695,16 @@ public class LocalizationUtilsTest {
             final List<LocaleItem> FULL_NAME_LOCALE_ITEMS = Arrays.asList(
                     new LocaleItem(Language.ENGLISH.getCode(), "FirstName LastName"),
                     new LocaleItem(Language.RUSSIAN.getCode(), "Имя Фамилия"));
-            final List<LocaleItem> FULL_COMPANY_LOCALE_ITEMS = Arrays.asList(
+
+            Company company0 = new Company(0, List.of(
                     new LocaleItem(Language.ENGLISH.getCode(), "Company"),
-                    new LocaleItem(Language.RUSSIAN.getCode(), "Компания"));
+                    new LocaleItem(Language.RUSSIAN.getCode(), "Компания")));
 
             Speaker speaker0 = new Speaker(0L,
                     "0000.jpg",
                     FULL_NAME_LOCALE_ITEMS,
-                    FULL_COMPANY_LOCALE_ITEMS,
-                    Collections.emptyList(),
+                    null,
+                    List.of(company0),
                     null,
                     new Speaker.SpeakerSocials(
                             null,
@@ -682,7 +722,9 @@ public class LocalizationUtilsTest {
 
             return Stream.of(
                     arguments(speaker0, Language.ENGLISH, EMPTY_SPEAKER_DUPLICATES, "LastName FirstName"),
-                    arguments(speaker0, Language.ENGLISH, FULL_SPEAKER_DUPLICATES, "LastName FirstName (Company)")
+                    arguments(speaker0, Language.RUSSIAN, EMPTY_SPEAKER_DUPLICATES, "Фамилия Имя"),
+                    arguments(speaker0, Language.ENGLISH, FULL_SPEAKER_DUPLICATES, "LastName FirstName (Company)"),
+                    arguments(speaker0, Language.RUSSIAN, FULL_SPEAKER_DUPLICATES, "Фамилия Имя (Компания)")
             );
         }
 
